--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,12 +1,12 @@
 allow 102.130.113.9;
 allow 102.130.123.16;
 allow 102.130.127.117;
+allow 102.219.85.85;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -23,7 +23,6 @@ allow 104.219.236.100;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
-allow 104.244.72.37;
 allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
@@ -108,6 +107,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -131,7 +131,6 @@ allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
-allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.81.186;
@@ -225,7 +224,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.209.2.98;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -801,6 +799,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -899,11 +898,13 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.137.248.100;
 allow 23.137.248.152;
+allow 23.137.248.69;
 allow 23.137.249.143;
 allow 23.137.249.185;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
+allow 23.137.253.9;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -957,11 +958,13 @@ allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
+allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:148f::1;
 allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
+allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
@@ -1048,7 +1051,6 @@ allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
@@ -1617,6 +1619,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.5.253.145;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1627,7 +1630,6 @@ allow 5.255.111.64;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.121.189;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
@@ -1686,6 +1688,7 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.24.207;
+allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.120;
@@ -1816,5 +1819,4 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
