--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -33,7 +32,6 @@ allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
-allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
@@ -496,6 +494,7 @@ allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.239.71.160;
 allow 185.241.208.115;
 allow 185.241.208.196;
 allow 185.241.208.202;
@@ -623,6 +622,7 @@ allow 193.189.100.199;
 allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
+allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
@@ -1459,6 +1459,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
@@ -1476,6 +1477,7 @@ allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
@@ -1504,6 +1506,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.225.162.26;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1613,9 +1616,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.200.223.245;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1658,7 +1659,6 @@ allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
 allow 66.175.223.155;
-allow 66.78.40.139;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1753,6 +1753,7 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
+allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
