--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -632,6 +632,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
+allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
@@ -649,6 +650,7 @@ allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
+allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
