--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -33,7 +32,6 @@ set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
-set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.233;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
@@ -496,6 +494,7 @@ set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
+set_real_ip_from 185.239.71.160;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
@@ -623,6 +622,7 @@ set_real_ip_from 193.189.100.199;
 set_real_ip_from 193.189.100.200;
 set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
+set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
@@ -1459,6 +1459,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:d602:1:14bc::2;
@@ -1476,6 +1477,7 @@ set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
+set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
@@ -1504,6 +1506,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.225.162.26;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1613,9 +1616,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.200.223.245;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1658,7 +1659,6 @@ set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.175.223.155;
-set_real_ip_from 66.78.40.139;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
@@ -1753,6 +1753,7 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
