--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -107,6 +107,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -208,7 +209,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.236.247.122;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -223,6 +223,7 @@ set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.205.142.75;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -236,7 +237,6 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
-set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.146.168;
@@ -797,6 +797,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -847,6 +848,7 @@ set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.156.142.30;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
+set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
@@ -900,6 +902,7 @@ set_real_ip_from 23.137.249.185;
 set_real_ip_from 23.137.249.8;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
@@ -956,6 +959,7 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:148f::1;
 set_real_ip_from 2602:fc24:18:1be9::1;
 set_real_ip_from 2602:fc24:18:1c54::1;
+set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:6106:2460::;
@@ -1051,6 +1055,7 @@ set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
 set_real_ip_from 2620:18c:0:192::132;
@@ -1513,6 +1518,7 @@ set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
+set_real_ip_from 45.131.108.215;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1643,7 +1649,6 @@ set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.88.252.85;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1749,6 +1754,7 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
+set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.119.126.161;
@@ -1808,5 +1814,4 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
